--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,1 +1,16 @@
-<a href="/dialog/authorize?response_type=code&client_id=abc123&redirect_uri=http%3A%2F%2Flocalhost%3A3000%2Fcallback">Authorize</a>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>ERT Auth Server</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
+  </head>
+  <body>
+    <div class="container">
+      <h1 class="text-center">Welcome to ERT Auth Server</h1>
+      <p class="text-center">
+        Please <a href="/login">login</a> first.</p>
+    </div>
+  </body>
+</html>
+
+
