--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,15 +1,25 @@
-<form action="/login" method="post">
-	<div>
-  	<label>Username:</label>
-  	<input type="text" name="username" /><br/>
-	</div>
-	<div>
-  	<label>Password:</label>
-  	<input type="password" name="password" />
-	</div>
-	<div>
-	  <input type="submit" value="Submit" />
-	</div>
-</form>
-<p><small>Hint - bob:secret</small></p>
-<p><small>Hint - joe:password</small></p>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>ERT Auth Server</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
+  </head>
+  <body>
+    <div class="container col-md-3">
+      <h1 class="text-center">Please login</h1>
+      <form action="/login" method="post">
+        <div class="form-group row">
+            <input type="text" class="form-control" placeholder="Username" name="username" /><br/>
+        </div>
+        <div class="form-group row">
+            <input type="password" class="form-control" placeholder="Password" name="password" /><br/>
+        </div>
+        <div class="form-group row">
+            <button class="btn btn-primary btn-block">Login</button>
+        </div>
+      </form>
+    </div>
+  </body>
+</html>
+
+
