--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,7 +8,12 @@
     <div class="container">
       <h1 class="text-center">Welcome to ERT Auth Server</h1>
       <p class="text-center">
-        Please <a href="/login">login</a> first.</p>
+        <% if (user) { %>
+          Hello <%= user.full_name %>, you are currently logged in. <a href="/logout">Logout</a>
+        <% } else { %>
+          Please <a href="/login">login</a> first.
+        <% } %>
+      </p>
     </div>
   </body>
 </html>
